--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Carreras">
         <activity
+            android:name=".Jugar"
+            android:exported="false" />
+        <activity
             android:name=".coche_jugar"
             android:exported="false" />
         <activity
